<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/main_image_description"
        android:scaleType="centerCrop"
        android:src="@drawable/app_bg" />

    <TextView
        android:id="@+id/lagos_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/roboto"
        android:text="@string/city_name"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lagos_welcome"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/roboto_italic"
        android:padding="@dimen/landing_padding_tv"
        android:text="@string/lagos_info"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/content_margin"
        android:drawablePadding="@dimen/landing_padding_tv"
        android:fontFamily="@font/roboto_light_italic"
        android:text="@string/swipe_right"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="italic" />


</RelativeLayout>