<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".SelectorActivity">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/content_margin"
            android:minHeight="@dimen/list_item_height"
            app:cardCornerRadius="@dimen/cardView_radius"
            android:clickable="true"
            android:focusable="true"
            android:onClick="toCulture"
            android:id="@+id/cultureSelector">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/cultureSection_image"
                    android:layout_width="@dimen/list_item_height"
                    android:layout_height="@dimen/list_item_height"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/culture_image"
                    android:scaleType="centerCrop"
                    android:visibility="visible"
                    tools:src="@drawable/culture_selector" />

                <TextView
                    android:id="@+id/culture_name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/content_margin"
                    android:layout_toEndOf="@id/cultureSection_image"
                    android:fontFamily="@font/roboto_slab"
                    android:gravity="bottom"
                    android:maxLines="2"
                    android:padding="@dimen/content_margin"
                    android:text="@string/culture_subtitle"
                    android:textSize="18sp"
                    android:visibility="visible" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/content_margin"
            android:minHeight="@dimen/list_item_height"
            app:cardCornerRadius="@dimen/cardView_radius"
            android:clickable="true"
            android:focusable="true"
            android:onClick="toMuseum"
            android:id="@+id/museumSelector">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/museumSection_image"
                    android:layout_width="@dimen/list_item_height"
                    android:layout_height="@dimen/list_item_height"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/museum_image"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/museums_selector" />

                <TextView
                    android:id="@+id/museum_name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/content_margin"
                    android:layout_toEndOf="@id/museumSection_image"
                    android:fontFamily="@font/roboto_slab"
                    android:gravity="bottom"
                    android:maxLines="2"
                    android:padding="@dimen/content_margin"
                    android:text="@string/museum_subtitle"
                    android:textSize="18sp" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/content_margin"
            android:minHeight="@dimen/list_item_height"
            app:cardCornerRadius="@dimen/cardView_radius"
            android:clickable="true"
            android:focusable="true"
            android:onClick="toHotel"
            android:id="@+id/hotelsSelector">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <ImageView
                    android:id="@+id/hotelsSection_image"
                    android:layout_width="@dimen/list_item_height"
                    android:layout_height="@dimen/list_item_height"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/hotels_image"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/hotels_selector" />

                <TextView
                    android:id="@+id/hotels_name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/content_margin"
                    android:layout_toEndOf="@id/hotelsSection_image"
                    android:fontFamily="@font/roboto_slab"
                    android:gravity="bottom"
                    android:maxLines="2"
                    android:padding="@dimen/content_margin"
                    android:text="@string/hotels_subtitle"
                    android:textSize="18sp" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/content_margin"
            android:minHeight="@dimen/list_item_height"
            app:cardCornerRadius="@dimen/cardView_radius"
            android:clickable="true"
            android:focusable="true"
            android:onClick="toLandmark"
            android:id="@+id/landmarksSelector">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <ImageView
                    android:id="@+id/landmarksSection_image"
                    android:layout_width="@dimen/list_item_height"
                    android:layout_height="@dimen/list_item_height"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/landmarks_image"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/landmarks_selector" />

                <TextView
                    android:id="@+id/landmarks_name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/content_margin"
                    android:layout_toEndOf="@id/landmarksSection_image"
                    android:fontFamily="@font/roboto_slab"
                    android:gravity="bottom"
                    android:maxLines="2"
                    android:padding="@dimen/content_margin"
                    android:text="@string/landmarks_subtitle"
                    android:textSize="18sp" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>